syntax = "proto3";
package fx.other;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/functionx/fx-core/server/grpc/gasprice/v1";

// Deprecated: Query
service Query {
  // Deprecated: please use cosmos.base.node.v1beta1.Service.Config
  rpc FxGasPrice(GasPriceRequest) returns (GasPriceResponse) {
    option (google.api.http).get = "/fx/other/gas_price";
  }
  // Deprecated: please use cosmos.base.node.v1beta1.Service.Config
  rpc GasPrice(GasPriceRequest) returns (GasPriceResponse) {
    option (google.api.http).get = "/other/v1/gas_price";
  }
}

// Deprecated: GasPriceRequest
message GasPriceRequest {}

// Deprecated: GasPriceResponse
message GasPriceResponse {
  repeated cosmos.base.v1beta1.Coin gas_prices = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"gas_prices\""
  ];
}
